--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.24.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
     "mermaid": "^11.12.2",
